<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_hierachy"
        android:icon="@drawable/actionbar_hierarchy"
        android:showAsAction="always"
        android:title="@string/view_hierarchy"/>
    <item
        android:id="@+id/menu_raz"
        android:icon="@drawable/actionbar_raz"
        android:showAsAction="always"
        android:title="@string/raz"/>
    <item
        android:icon="@drawable/actionbar_menu"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText">
        <menu android:popupBackground="@drawable/white" >
            <item
                android:id="@+id/menu_save"
                android:icon="@drawable/actionbar_save"
                android:showAsAction="ifRoom|withText"
                android:title="@string/save"/>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/actionbar_settings"
                android:showAsAction="ifRoom|withText"
                android:title="@string/settings"/>
            <item
                android:id="@+id/menu_help"
                android:icon="@drawable/actionbar_help"
                android:showAsAction="ifRoom|withText"
                android:title="@string/help"/>
            <item
                android:id="@+id/menu_about_us"
                android:icon="@drawable/actionbar_about_us"
                android:showAsAction="ifRoom|withText"
                android:title="@string/about_us"/>
            <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/actionbar_exit"
                android:showAsAction="ifRoom|withText"
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>