<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/actionbar_send"
        android:showAsAction="always"
        android:title="@string/upload"/>
    <item
         android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_light"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText">
        <menu android:popupBackground="@drawable/white" >
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/actionbar_settings"
                android:showAsAction="ifRoom|withText"
                android:title="@string/settings"/>
            <item
                android:id="@+id/menu_help"
                android:icon="@drawable/actionbar_help"
                android:showAsAction="ifRoom|withText"
                android:title="@string/help"/>
            <item
                android:id="@+id/menu_about_us"
                android:icon="@drawable/actionbar_about_us"
                android:showAsAction="ifRoom|withText"
                android:title="@string/about_us"/>
            <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/actionbar_exit"
                android:showAsAction="ifRoom|withText"
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>